[tool.poetry]
name = "tosclib"
version = "1.0.0"
description = "Generate and edit Touch OSC .tosc files."
authors = ["AlbertoV5 <58243333+AlbertoV5@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://albertov5.github.io/tosclib"
repository = "https://github.com/AlbertoV5/tosclib"
documentation = "https://albertov5.github.io/tosclib/docs/build/html/index.html"
keywords = ["xml", "tosc"]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
# Testing dependencies
tox = "^3.25.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pytest-profiling = "^1.7.0"
pytest-doctestplus = "^0.12.0"
black = "^22.6.0"
snakeviz = "^2.1.1"
setuptools = "^61.2.0"
pymongo = "^4.2.0"
# Docs dependencies
furo = "^2022.4.7"
sphinx = "^4.5.0"
sphinx_copybutton = "^0.5.0"
sphinx-toolbox = "^3.2.0"
# Demos dependencies
numpy = "^1.22.3"
Pillow = "^9.1.1"
aiohttp = "^3.8.1"

[tool.pytest.ini_options]
markers = [
    "profile: marks tests for profiling.",
    "short: fast tests with smaller CPU load",
    "long: computation-heavy tests, large files",
    "db: connect to mongodb"
]
#addopts = "--cov --cov-report html:docs/_static/cov"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] (%(filename)s:%(lineno)s): %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/tests.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] (%(filename)s:%(lineno)s): %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
